# derisk-cli

./: .gitignore  README.md  pyproject.toml
src/openderisk_cli/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  py.typed
src/openderisk_cli/client/: __init__.py  agent.py  base.py  chat.py  http.py  mcp.py
src/openderisk_cli/commands/: __init__.py  agent.py  chat.py  config.py  mcp.py
src/openderisk_cli/models/: __init__.py  app.py  chat.py  mcp.py
src/openderisk_cli/utils/: __init__.py  decorators.py  output.py
tests/: __init__.py  conftest.py  test_config.py  test_exceptions.py  test_models.py
